--- a/src/layouts/partials/Header.astro
+++ b/src/layouts/partials/Header.astro
@@ -28,9 +28,9 @@ if (disabledLanguages.includes(lang)) {
 <header class={`header z-30 ${settings.sticky_header && "sticky top-0"}`}>
   <nav class="navbar container">
     {/* logo */}
-    <div class="order-0">
+    <div class="font-secondary font-bold leading-tight text-dark order-0 text-h2-sm md:text-h2">
       <!--  <Logo />     -->
-      {header_title}
+     {header_title}
     </div>
 
     {/* navbar toggler */}
