--- a/src/layouts/partials/CallToAction.astro
+++ b/src/layouts/partials/CallToAction.astro
@@ -6,25 +6,36 @@ const { call_to_action } = Astro.props;
 
 {
   call_to_action.data.enable && (
-    <section class="mb-28">
-      <div class="container">
-        <div class="mx-auto mb-12 text-center md:col-10 lg:col-8 xl:col-6">
-          <div class="row items-center text-center ">
-            
- 
-         
+          <div class="row items-center justify-between ">
+            <ImageMod
+                src={call_to_action.data.image}
+                width={250}
+                height={350}
+                alt="Villa Tamaris"
+                format="webp"
+              />
+              <h2
+                set:html={markdownify(call_to_action.data.title)}
+                class="mb-2"
+              />
+              <p
+                set:html={markdownify(call_to_action.data.description)}
+                class="mb-6"
+              />
+
               {call_to_action.data.button.enable && (
+            <div class="flex justify-center w-full">
+
                 <a
                   class="btn btn-primary"
                   href={call_to_action.data.button.link}
                 >
                   {call_to_action.data.button.label}
                 </a>
+              </div>
+
               )}
-            
           </div>
-        </div>
-      </div>
-    </section>
+
   )
 }
