--- a/src/pages/[...lang]/blog/[single].astro
+++ b/src/pages/[...lang]/blog/[single].astro
@@ -5,6 +5,8 @@ import { getSinglePage } from "@/lib/contentParser.astro";
 import { supportedLang } from "@/lib/utils/languageParser";
 import type { ContentEntryMap } from "astro:content";
 
+
+
 export async function getStaticPaths() {
   const BLOG_FOLDER = "blog";
 
@@ -29,8 +31,11 @@ export async function getStaticPaths() {
   return paths.flat();
 }
 
+const { lang } = Astro.params;
 const { post } = Astro.props;
 const { title, meta_title, description, image } = post.data;
+
+
 ---
 
 <Base
