--- a/src/pages/[...lang]/index.astro
+++ b/src/pages/[...lang]/index.astro
@@ -205,20 +205,16 @@ const shuffledPosts = posts.sort(() => 0.5 - Math.random()).slice(0, 2);
 
   <!-- Blog Posts Aléatoires -->
   <section class="section">
-    <div class="container">
-      <div class="row gx-5">
-        <div class="lg:col-8 mx-auto">
-          <div class="row">
-            {
-              shuffledPosts.map((post) => (
-                <div class="mb-14 md:col-6">
-                  <BlogCard data={post} />
-                </div>
-              ))
-            }
+    <div class="container mx-auto">
+      <div class="grid grid-cols-12 gap-5">
+        {shuffledPosts.map((post) => (
+          <div class="mb-14 md:col-6 lg:col-8 mx-auto" key={post.id}>
+            <BlogCard data={post} />
           </div>
-        </div>
+        ))}
       </div>
     </div>
+    
+    
   </section>
 </Base>
