Add Flag to switch lang , remove select list , remove  automatic detection and localstorage, remove languageswitcher.tsx

--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -166,7 +166,8 @@ const hreflangLinks = !isExcludedPath
     />
     <meta name="twitter:card" content="summary_large_image" />
 
-     <!-- -->{schemaVacationRental && <Fragment set:html={schemaVacationRental} />}
+     <!-- -->
+    {schemaVacationRental && <Fragment set:html={schemaVacationRental} />}
      <meta name="msapplication-TileColor" content="#000000" />
      <meta
        name="theme-color"
