--- a/src/layouts/partials/Header.astro
+++ b/src/layouts/partials/Header.astro
@@ -29,7 +29,7 @@ if (disabledLanguages.includes(lang)) {
 <header class={`header z-30 ${settings.sticky_header && "sticky top-0"}`}>
   <nav class="navbar container">
     {/* logo */}
-    <div class="font-secondary font-bold leading-tight text-dark order-0 text-h2-sm md:text-h2">
+    <div class="font-secondary font-bold leading-tight text-dark order-0 text-h1-sm md:text-h1">
       <!--  <Logo />     -->
       <a href={menu.main[0].url}>
       { header_title }
@@ -77,26 +77,9 @@ if (disabledLanguages.includes(lang)) {
           </>
         ))
       }
-      {/* Navigation button */}
-      {
-        /*
-        book_now_button.enable && (
-          <li class="mt-4 inline-block lg:hidden">
-            <a
-              class="btn btn-outline-primary btn-sm"
-              href={book_now_button.link}
-            >
-              {book_now}
-            </a>
-          </li>
-        )
 
-      <img src={imageFlag} alt={seo_gimmick} class="w-10 h-10 mx-10"/>
-
-      */
-      }
     </ul>
-
+  {/* Les boutons à droites */}
     <div class="order-1 ml-auto flex items-center md:order-2 lg:ml-0">
       {
         book_now_button.enable && (
