--- a/src/layouts/partials/Header.astro
+++ b/src/layouts/partials/Header.astro
@@ -28,9 +28,8 @@ if (disabledLanguages.includes(lang)) {
 
 <header class={`header z-30 ${settings.sticky_header && "sticky top-0"}`}>
   <nav class="navbar container">
-    {/* logo */}
+    {/* Titre */}
     <div class="font-secondary font-bold leading-tight text-dark order-0 text-h1-sm md:text-h1">
-      <!--  <Logo />     -->
       <a href={menu.main[0].url}>
       { header_title }
       <a/>
@@ -53,7 +52,6 @@ if (disabledLanguages.includes(lang)) {
           transform="rotate(45 10 10)"></polygon>
       </svg>
     </label>
-    {/* /navbar toggler */}
 
     <ul
       id="nav-menu"
