--- a/src/pages/[...lang]/index.astro
+++ b/src/pages/[...lang]/index.astro
@@ -73,7 +73,7 @@ const shuffledPosts = posts.sort(() => 0.5 - Math.random()).slice(0, 2);
         <span>4</span><img src="/images/icon_room.svg" alt="4 Bedrooms" class="w-10 h-10" />
       </div>
       <div class="flex items-center space-x-2">
-        <span>3</span><img src="/images/icon_shower.png" alt="3 Showers" class="w-6 h-9" />
+        <span>3</span><img src="/images/icon_shower.svg" alt="3 Showers" class="w-6 h-9" />
       </div>
       <div class="flex items-center space-x-2">
         <span></span><img src="/images/icon_beach.svg" alt="beachfront sur la Plage" class="w-12 h-14" />
