google my business review page

--- a/src/pages/[...lang]/villa-tamaris-beachfront-ouistreham-feature.astro
+++ b/src/pages/[...lang]/villa-tamaris-beachfront-ouistreham-feature.astro
@@ -55,7 +55,9 @@ const { title, description, meta_title, image, detail } = readcontent[0].data;
               )}
             </>
           ))}
-
+          <div class="content">
+            <Content />
+          </div>
 
         </div>
       </div>
